--- a/index.html
+++ b/index.html
@@ -251,17 +251,33 @@ button.active-filter {
         /* --- Responsive --- */
        @media (max-width: 900px) {
   main {
-    grid-template-columns: 1fr;
+    display: flex;
+    flex-direction: column;
+  }
+
+  h1 {
+    order: 1;
   }
 
   #sidebar {
-    order: -1; /* move sidebar above main content */
-    position: static; /* optional: remove sticky on mobile */
+    order: 2;
+    position: static;
   }
 
-            .header-container { flex-direction: column; gap: 1rem; }
-            .nav-menu { gap: 1rem; }
-        }
+  #main-content {
+    order: 3;
+  }
+
+  .header-container {
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .nav-menu {
+    gap: 1rem;
+  }
+}
+
 		
     </style>
 </head>
@@ -280,14 +296,15 @@ button.active-filter {
 </header>
 <body>
 <main>
-   
-		
-		<div id="main-content">
-    <h1>Digital Collection</h1>
+
+  <h1>Digital Collection</h1>
+
+  <div id="main-content">
     <div id="research-list">Loading research...</div>
   </div>
 
   <div id="sidebar">
+
     <input type="text" id="search" placeholder="Search by title, author, keyword...">
 	<h3>Filter by Year</h3>
     <div id="year-buttons"></div>
