--- a/index.html
+++ b/index.html
@@ -280,10 +280,12 @@ button.active-filter {
 </header>
 <body>
 <main>
+<h1>Digital Collection</h1>
+</main>
+<main>
    
 		
 		<div id="main-content">
-    <h1>Digital Collection</h1>
     <div id="research-list">Loading research...</div>
   </div>
 
