--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
             top: 0;
             z-index: 1000;
         }
+       h1 {
+  margin-left: 60px;
+}
+
 
         .header-container {
             display: flex;
@@ -279,9 +283,9 @@ button.active-filter {
     </div>
 </header>
 <body>
-<main>
+<br>
 <h1>Digital Collection</h1>
-</main>
+
 <main>
    
 		
