Add campus class for responsive image styling

--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
 
   <style>
     .myImage { width: 500px; height: auto; max-width: 100%; }
+	.campus { width: 100%; height: auto; display: block; } 
 	:root {
             --primary-blue: #003366;
             --secondary-blue: #00509d;
