--- a/about.html
+++ b/about.html
@@ -226,10 +226,16 @@
   display: block;
 }
 
-    @media (max-width: 768px) {
-     .nav-menu { 
+    @media (max-width: 900px) {
+  .header-container { 
+    flex-direction: column; 
     gap: 1rem; 
   }
+
+  .nav-menu { 
+    gap: 1rem; 
+  }
+
 
       .hero-section h1 { font-size: 2rem; }
       .hero-section p { font-size: 1rem; }
